syntax="proto3"; //版本号
package ioBuf;  //包名
option go_package = "./;ioBuf";

// 对外服数据协议
message outPutBuf {
  // 请求命令类型: 0 心跳，1 业务
  uint32 cmdCode = 1;
  // 协议开关，用于一些协议级别的开关控制，比如 安全加密校验等。 : 0 不校验
  uint32 protocolSwitch = 2;
  // 业务路由（高16为主, 低16为子）
  uint32 cmdMerge = 3;
  // 响应码: 0:成功, 其他为有错误
  sint32 responseStatus = 4;
  // 验证信息（错误消息、异常消息），通常情况下 responseStatus == -1001 时， 会有值
  string validMsg = 5;
  // 业务请求数据
  bytes data = 6;
}
